--- a/index.html
+++ b/index.html
@@ -70,3 +70,263 @@
     <li class="opções__item"><a href="#" class="opções__link">Favoritos</a></li>
     <li class="opções__item"><a href="#" class="opções__link">Minha estante</a></li>
 </ul>
+<div class="container">
+    <a href="#"><img src="Img/Favoritos.svg" alt="Meus favoritos"
+        class="container__imagem container__imagem-transparente"></a>
+    <a href="#" class="container__link">
+        <img src="Img/Compras.svg" alt="Carrinhos de compras" class="container__imagem">
+      <p class="container__texto">Minha sacola</p>  
+    </a>
+    <a href="#" class="container__link">
+        <img src="Img/Usuario.svg" alt="Meu perfil" class="container__imagem">
+        <p class="container__texto">Meu perfil</p>  
+    </a>
+</div>
+</header>
+<section class="banner">
+<h2 class="banner__titulo">Já sabe por onde começar?</h2>
+<p class="banner__texto">Encontre em nossa estante o que precisa para seu desenvolvimento!</p>
+<input type="search" class="banner__pesquisa" placeholder="Qual será sua próxima leitura?">
+</section>
+<section class="carrossel">
+<h2 class="carrossel__titulo">Novos lançamentos</h2>
+<!-- Slider main container -->
+<div class="carrossel__container">
+<div class="swiper">
+<!-- Additional required wrapper -->
+<!-- If we need pagination -->
+<div class="swiper-pagination"></div>
+
+<div class="swiper-wrapper">
+<!-- Slides -->
+<div class="swiper-slide"><Img src="Img/ApacheKafka.svg"
+      alt="Livro sobre apache kafka e spring boot da alura books"></Img>></div>
+<div class="swiper-slide"><Img src="Img/Liderança.svg"
+      alt="Livro sobre liderança em design da alura books"></div>
+<div class="swiper-slide"><Img src="Img/Javascript.svg"
+      alt="Livro sobre Javascript assertivo da alura books"></div>
+<div class="swiper-slide"><Img src="Img/Guia Front-end.svg" alt="Livro guia Front-end"></div>
+<div class="swiper-slide"><Img src="Img/Portugol.svg" alt="Livro sobre portugol"></div>
+<div class="swiper-slide"><Img src="Img/Acessibilidade.svg" alt="Livro sobre acessibilidade"></div>
+</div>
+
+<!-- If we need navigation buttons -->
+<div class="swiper-button-prev"></div>
+<div class="swiper-button-next"></div>
+</div>
+
+<div class="card">
+<!-- 1º linha -->
+<div class="card__descrição">
+    <!-- 1º coluna -->
+    <div class="descrição">
+        <h3 class="descrição__titulo">Talvez você também se interesse por...</h3>
+        <h2 class="descrição__titulo-livro">Angular 11 e Firebase</h2>
+        <p class="descrição__texto">Construindo uma aplicação integrada com a plataforma do google</p>
+    </div>
+<!-- 2º coluna -->
+<img src="Img/Angular.svg" class="descrição__imagem">
+</div>
+
+<!-- 2º linha -->
+<div class="card__botões">
+    <!-- 1º coluna -->
+    <ul class="botões">
+        <li class="botões__item"><img src="Img/Favoritos.svg" alt="Favoritar livro"></li>
+                <li class="botões__item"><img src="Img/Compras.svg" alt="Adicionar no carrinho de compras"></li>
+            </ul>
+            <!-- 2º coluna -->
+            <a href="#" class="botões__ancora">Saiba mais</a>
+        </div>
+    </div>
+</div>
+</section>
+
+<section class="carrossel">
+    <h2 class="carrossel__titulo">MAIS VENDIDOS</h2>
+    <!-- Slider main container -->
+    <div class="carrossel__container">
+    <div class="swiper">
+        <!-- Additional required wrapper -->
+        <!-- If we need pagination -->
+        <div class="swiper-pagination"></div>
+
+<div class="swiper-wrapper">
+  <!-- Slides -->
+  <div class="swiper-slide"><Img src="Img/Liderança.svg"
+    alt="Livro sobre liderança em design da alura books"></div>
+  <div class="swiper-slide"><Img src="Img/ApacheKafka.svg"
+          alt="Livro sobre apache kafka e spring boot da alura books"></Img>></div>
+  <div class="swiper-slide"><Img src="Img/Javascript.svg"
+          alt="Livro sobre Javascript assertivo da alura books"></div>
+  <div class="swiper-slide"><Img src="Img/Guia Front-end.svg" alt="Livro guia Front-end"></div>
+  <div class="swiper-slide"><Img src="Img/Portugol.svg" alt="Livro sobre portugol"></div>
+  <div class="swiper-slide"><Img src="Img/Acessibilidade.svg" alt="Livro sobre acessibilidade"></div>
+</div>
+
+<!-- If we need navigation buttons -->
+<div class="swiper-button-prev"></div>
+<div class="swiper-button-next"></div>
+ </div>
+
+ <div class="card">
+    <!-- 1º linha -->
+    <div class="card__descrição">
+        <!-- 1º coluna -->
+        <div class="descrição">
+            <img src="img/Estrelinhas.svg" alt="Avaliação 5 estrelas">
+            <h3 class="descrição__titulo">Autora do Mês</h3>
+            <h2 class="descrição__titulo-livro">Juliana Agarikov</h2>
+            <p class="descrição__texto">Analista de sistemas, a autora Juliana é especialista em front Front-end</p>
+        </div>
+    <!-- 2º coluna -->
+    <img src="Img/JulianaAgrikov.svg" class="descrição__imagem">
+    </div>
+
+    <!-- 2º linha -->
+    <div class="card__botões">
+        <!-- 1º coluna -->
+        <ul class="botões">
+            <li class="botões__item"><img src="Img/Favoritos.svg" alt="Favoritar livro"></li>
+            <li class="botões__item"><img src="Img/Compras.svg" alt="Adicionar no carrinho de compras"></li>
+        </ul>
+        <!-- 2º coluna -->
+        <a href="#" class="botões__ancora">Saiba mais</a>
+    </div>
+ </div>
+</div>
+</section>
+
+<section class="tópicos">
+    <h2 class="tópicos__título">TÓPICOS VISITADOS RECENTEMENTE</h2>
+        <ul class="tópicos__lista">
+            <li class="tópicos__item">
+                <a href="#" class="tópicos__link">Android</a>
+            </li>
+            <li class="tópicos__item">
+                <a href="#" class="tópicos__link">Marketing Digital</a>
+            </li>
+            <li class="tópicos__item">
+                <a href="#" class="tópicos__link">Agile</a>
+            </li>
+            <li class="tópicos__item">
+                <a href="#" class="tópicos__link">Startups</a>
+            </li>
+            <li class="tópicos__item">
+                <a href="#" class="tópicos__link">HTML & CSS</a>
+            </li>
+            <li class="tópicos__item">
+                <a href="#" class="tópicos__link">Python</a>
+            </li>
+            <li class="tópicos__item">
+                <a href="#" class="tópicos__link">oo</a>
+            </li>
+            <li class="tópicos__item">
+                <a href="#" class="tópicos__link">Java</a>
+            </li>
+        </ul>
+    </section>
+
+        <div class="contato__descrição">
+        <h2 class="contato__título">Fique por dentro das novidades!</h2>
+        <p class="contato__texto">atualizações de e-books, novos livros, promoções e outros.</p>
+    </div>
+        <input type="email"placeholder="Cadastre seu e-mail" class="contato__email">
+    </section>
+
+    <hr />
+
+    <footer class="rodapé">
+        <h2 class="rodapé__título">Grupo Alura</h2>
+        <ul class="lista-rodapé"
+            <li class="lista-rodapé__título">Educação</li>
+            <li class="lista-rodapé__item">
+                <img src="Img/CasadoCódigo.svg" alt="Logo da casa do código">
+                <a href="#" class="lista-rodapé__link"></a>
+            </li>
+            <li class="lista-rodapé__item">
+                <img src="Img/Caelum.svg" alt="Logo da Caelum">
+                <a href="#" class="lista-rodapé__link"></a>
+            </li>
+        </ul>
+
+        <ul class="lista-rodapé"
+    <li class="lista-rodapé__título">Educação online</li>
+    <li class="lista-rodapé__item">
+        <img src="Img/Alura.svg" alt="Logo da Alura">
+        <a href="#" class="lista-rodapé__link"></a>
+        </li>
+
+        <li class="lista-rodapé__item">
+            <img src="Img/AluraParaEmpresas.svg" alt="Alura para Empresas">
+            <a href="#" class="lista-rodapé__link"></a>
+        </li>
+        <li class="lista-rodapé__item">
+            <img src="Img/AluraLATAM.svg" alt="Logo da Alura LATAM">
+            <a href="#" class="lista-rodapé__link"></a>
+        </li>
+        <li class="lista-rodapé__item">
+            <img src="Img/AluraStart.svg" alt="Logo da Alura Start">
+            <a href="#" class="lista-rodapé__link"></a>
+        </li>
+        <li class="lista-rodapé__item">
+            <img src="Img/MusicDot.svg" alt="Logo da Music Dot">
+            <a href="#" class="lista-rodapé__link"></a>
+        </li>
+        <li class="lista-rodapé__item">
+            <img src="Img/AluraLíngua.svg" alt="Logo da Alura Língua">
+            <a href="#" class="lista-rodapé__link"></a>
+        </li>
+        <li class="lista-rodapé__item">
+            <img src="Img/PM3.svg" alt="Logo da Alura PM3">
+            <a href="#" class="lista-rodapé__link"></a>
+        </li>
+    </ul>
+
+    <ul class="lista-rodapé">
+        <li class="lista-rodapé__título">Comunidade</li>
+        <li class="lista-rodapé__item">
+            <img src="Img/HipsterspontoTech.svg" alt="Logo do Hipsters ponto Tech">
+            <a href="#" class="lista-rodapé__título"></a>
+        </li>
+        <li class="lista-rodapé__item">
+            <img src="Img/ScubaDev.svg" alt="Logo do Scuba Dev">
+            <a href="#" class="lista-rodapé__título"></a>
+        </li>
+        <li class="lista-rodapé__item">
+            <img src="Img/LayerspontoTech.svg" alt="Logo do Layers ponto Tech">
+            <a href="#" class="lista-rodapé__título"></a>
+        </li>
+        <li class="lista-rodapé__item">
+            <img src="Img/LikeaBoss.svg" alt="Logo do Like a Boss">
+            <a href="#" class="lista-rodapé__título"></a>
+        </li>
+        <li class="lista-rodapé__item">
+            <img src="Img/CarreiraSemfronteira.svg" alt="Logo do Carreira Sem Fronteiras">
+            <a href="#" class="lista-rodapé__título"></a>
+        </li>
+        <li class="lista-rodapé__item">
+            <img src="Img/HipsterpontoJobs.svg" alt="Logo do Hipsters ponyo Jobs">
+            <a href="#" class="lista-rodapé__título"></a>
+        </li>
+        <li class="lista-rodapé__item">
+            <img src="Img/GUJ.svg" alt="Logo do GUJ">
+            <a href="#" class="lista-rodapé__título"></a>
+        </li>
+    </ul>
+    </footer>
+
+    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script&gt;
+    <script>
+        const swiper = new Swiper('.swiper', {
+            spaceBetween: 10,
+            slidesPerView: 3,
+            pagination: {
+                el: '.swiper-pagination',
+                type: 'bullets',
+            },
+});
+        </script>
+</body>
+
+</html>
